# album_curation

./: .gitignore  cover_save.fish  flake.nix
album_setup/: .build  setup.py
album_split/: .build  split.py  split.sh
album_to_44100hz/: .build  resample.sh
album_write/: .build  write.py
album_write/album_write/: .build
cover_resize/: .build  resize.sh
discid/: .build  flake.nix  id.py  result
mb_manifest/: manifest.py
mbid/: .build  mbid.py
replicator/: Cargo.toml  config.toml
replicator/src/: main.rs
rsdiscid/: Cargo.toml
rsdiscid/src/: format.rs  local.rs  main.rs  remote.rs  utils.rs
