[package]
name = "rsdiscid"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
discid = "0.7.0"
dotenvy = "0.15.7"
lexical-sort = "0.3.1"
metaflac = "0.2.8"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
toml = "1.1.2"
